@@ -5,6 +5,7 @@ FOF 3.1.1
 + @plural() Blade statement to support JText::plural()
 + @jlayout() Blade statement to load and render JLayout view templates
 + ViewTemplate field passes $rowid to the view template
++ Published field takes into account ACL
 
 FOF 3.1.0
 ================================================================================
